# customer-churn-mlops

./: .gitignore  Makefile  README.md  app.py  conftest.py  dockerfile  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  02_experiments.ipynb  03_model_explainability.ipynb  04_evaluation.ipynb  mlflow.db
src/: __init__.py  config.py  data_loader.py  decision.py  evaluation.py  explainability.py  modeling.py  pipeline.py  predict_batch.py  preprocessing.py  utils.py
tests/: test_decision.py  test_modeling.py  test_pipeline.py  test_preprocessing.py
