[project]
name = "customer-churn-mlops"
version = "0.1.0"
description = "End-to-end Customer Churn Prediction system with MLflow, FastAPI, Docker, and CI"
authors = [
    { name = "Jahid Hasan", email = "Jahidsam7@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "seaborn>=0.13.2",
    "scikit-learn>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "mlflow>=2.9",
    "joblib>=1.3",
    "pydantic>=2.0",
    "shap>=0.49.1",
    "optuna>=4.7.0",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
